--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                     <ul class="footer-menu">
                         <li class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Organize Sanayi Bölgesi, Teknoloji Bulvarı No: 123, Ankara, Türkiye</span>
+                            <span>İvedik OSB 1353.Cd.Fora iş merkezi A blk.2.kat no: 119 Yenimahalle/Ankara </span>
                         </li>
                         <li class="contact-item">
                             <i class="fas fa-phone"></i>
